# branching_workbook

./: .gitignore  AGENTS.md  CLAUDE.md  CONVERSATION_CONTEXT.md  LICENSE  README.md  branching-workbook-mockup.jsx  branching-workbook.md  feedback.md  generation-interaction-log.md  implementation-plan.md  justfile  phase7-issues.md
client/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
client/scripts/: screenshots.mjs
client/src/: App.test.ts  App.tsx  AutoGrowTextarea.tsx  api.test.ts  api.ts  index.css  nodeMapLayout.ts
client/src/chat/: turns.test.ts  turns.ts
client/src/editor/: WorkbookEditor.tsx
client/src/samplers/: SamplerDrawer.tsx  fields.test.ts  fields.ts
client/src/tree/: hash.test.ts  hash.ts  persistence.test.ts  persistence.ts  reshape.test.ts  reshape.ts  types.ts
deploy/: README.md
deploy/runpod/: Dockerfile  README.md  runpod-entrypoint.sh
redesign/: autocomplete-mode.md  chat-mode.md  handoff.md  inline-display-mode.md  picker-followup.md
server/: pyproject.toml
server/bwbk/: db.py  dialog.py  main.py  mock.py  proxy.py  samplers.py  settings.py  userdata.py
server/tests/: test_db.py  test_dialog.py  test_mock.py  test_proxy.py  test_samplers.py  test_settings.py
